0025746: Excessive memory use in math_Matrix

math_DoubleTab now statically allocates only 16 items for Buf
Removed indirection table from math_DoubleTab